--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -94,12 +94,14 @@
   }
 
   img {
-    max-width: 175px;
-    border-radius: 50%;
+    max-width: 100%; /* Ensures the image doesn't exceed the container width */
+    height: auto; /* Maintains the original aspect ratio */
+    // Remove border-radius for a rectangular shape
+    // border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
-      border: 1px solid var(--global-border-color);
+      // border: 1px solid $border-color;
     }
   }
 }
